# deploying-onnx-model-with-kubernetes-locally-and-autoscaling

./: README.md  main.py  pyproject.toml
k8s/: deployment.yaml  service.yaml
service/: Dockerfile  app.py  load_test.py  pyproject.toml  test.py
